fix: ripresentato overflow testo messaggio

--- a/css/style.css
+++ b/css/style.css
@@ -277,8 +277,11 @@ li {
 
     align-self: baseline;
     
+}
 
-
+.testo-messaggio {
+        max-width: 88%;
+        word-wrap: break-word;
 }
 
 
@@ -287,7 +290,7 @@ li {
     gap: 5px;
     position: relative;
     max-width: 60%;
-    word-wrap: break-word;
+    word-wrap:normal;
     padding: 0.5em 0.5em;
     margin: 10px;
     border-radius: 12px;
